--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,7 +79,7 @@
 }
 
 .dark {
-  --background: oklch(0.141 0.005 285.823);
+  --background:  oklch(0.274 0.006 286.033);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.21 0.006 285.885);
   --card-foreground: oklch(0.985 0 0);
@@ -120,3 +120,5 @@
     @apply bg-background text-foreground;
   }
 }
+/* oklch(0.141 0.005 285.823); */
+/* oklch(1 0 0); */
